// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool discovery snapshot > full tool catalog ID set is locked (sorted) > full-catalog-tool-ids 1`] = `
[
  "account_status",
  "account_upgrade",
  "account_usage_report",
  "approve_agent_work",
  "approve_decision",
  "batch_action",
  "batch_create_entities",
  "batch_delete_entities",
  "check_execution_readiness",
  "check_spawn_guard",
  "classify_task_model",
  "comment_on_entity",
  "complete_plan",
  "configure_org",
  "configure_outcome_type",
  "consolidate_pr",
  "create_decision",
  "create_entity",
  "create_milestone",
  "create_task",
  "delegate_agent_task",
  "entity_action",
  "get_active_sessions",
  "get_agent_status",
  "get_decision_history",
  "get_initiative_pulse",
  "get_initiative_stream_state",
  "get_morning_brief",
  "get_my_trust_context",
  "get_operator_chronicle",
  "get_org_snapshot",
  "get_outcome_attribution",
  "get_pending_decisions",
  "get_relevant_learnings",
  "get_scoring_signals",
  "get_task_with_context",
  "handoff_task",
  "improve_plan",
  "list_entities",
  "list_entity_comments",
  "manage_lifecycle",
  "orgx_ack_attention",
  "orgx_act",
  "orgx_activate_work",
  "orgx_apply_changeset",
  "orgx_archive_work",
  "orgx_attach",
  "orgx_attach_artifact",
  "orgx_block_work",
  "orgx_bootstrap",
  "orgx_cancel_work",
  "orgx_capture_decision",
  "orgx_change_entity_state",
  "orgx_check_agent_delegation",
  "orgx_check_delegation",
  "orgx_check_execution_readiness",
  "orgx_classify_agent_task",
  "orgx_command_status",
  "orgx_complete_entity",
  "orgx_complete_plan",
  "orgx_complete_with_proof",
  "orgx_complete_work",
  "orgx_complete_work_with_proof",
  "orgx_controller_status",
  "orgx_create_and_launch_initiative_hierarchy",
  "orgx_create_and_start_agent_task",
  "orgx_create_decision",
  "orgx_create_entity",
  "orgx_create_initiative",
  "orgx_create_initiative_hierarchy",
  "orgx_create_milestone",
  "orgx_create_task",
  "orgx_create_work",
  "orgx_create_workstream",
  "orgx_decide",
  "orgx_delegate_work",
  "orgx_delete_work",
  "orgx_describe_action",
  "orgx_describe_tool",
  "orgx_emit_activity",
  "orgx_emit_execution_graph",
  "orgx_estimate_agent_task",
  "orgx_events_tail",
  "orgx_expect",
  "orgx_flag_risk_work",
  "orgx_free_audit",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_next_actions",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_receipt_review_queue",
  "orgx_get_work_receipt",
  "orgx_get_workspace_context",
  "orgx_handoff_task",
  "orgx_improve_plan",
  "orgx_inspect",
  "orgx_launch_initiative",
  "orgx_lease",
  "orgx_list_pending_decisions",
  "orgx_list_work_receipts",
  "orgx_open_artifact_review",
  "orgx_open_decision_approval_review",
  "orgx_open_decision_rejection_review",
  "orgx_open_decision_review",
  "orgx_panel_snapshot",
  "orgx_pause_work",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_read_plan",
  "orgx_reassign_streams_work",
  "orgx_recommend",
  "orgx_record_decision",
  "orgx_record_plan_edit",
  "orgx_reopen_work",
  "orgx_request_attention",
  "orgx_request_independent_artifact_review",
  "orgx_request_plan_critique",
  "orgx_request_question",
  "orgx_resume_work",
  "orgx_retry_work",
  "orgx_save_plan",
  "orgx_search",
  "orgx_ship_batch_work",
  "orgx_spawn",
  "orgx_start_agent_task",
  "orgx_start_plan",
  "orgx_start_work",
  "orgx_submit_receipt",
  "orgx_submit_work_receipt",
  "orgx_tail",
  "orgx_unblock_work",
  "orgx_update_entity",
  "orgx_update_work",
  "orgx_validate_initiative_plan",
  "orgx_validate_studio_content",
  "orgx_validate_work_receipt",
  "orgx_widget_approve_artifact",
  "orgx_widget_decide",
  "orgx_widget_receipt_call",
  "orgx_widget_request_artifact_changes",
  "orgx_widget_select_workspace",
  "orgx_write",
  "pin_workstream",
  "query_org_memory",
  "queue_action",
  "recall_memory",
  "recommend_next_action",
  "record_outcome",
  "record_plan_edit",
  "record_quality_score",
  "reject_decision",
  "remember_decision",
  "request_independent_artifact_review",
  "resume_agent_run",
  "resume_plan_session",
  "review_artifact",
  "save_artifact",
  "scaffold_initiative",
  "score_next_up_queue",
  "scoring_config",
  "spawn_agent_task",
  "start_autonomous_session",
  "start_plan_session",
  "stats",
  "submit_learning",
  "sync_client_state",
  "track_project_progress",
  "update_entity",
  "update_stream_progress",
  "validate_studio_content",
  "verify_entity_completion",
  "workspace",
]
`;

exports[`tool discovery snapshot > full tool catalog description hashes are locked > full-catalog-description-hashes 1`] = `
{
  "account_status": "9f095ddc4b5d",
  "account_upgrade": "31e8916995ce",
  "account_usage_report": "d237e282bd29",
  "approve_agent_work": "a1bcdcefe040",
  "approve_decision": "366e6750fb62",
  "batch_action": "04b782e7b6cd",
  "batch_create_entities": "c02c3ca88bd8",
  "batch_delete_entities": "3963d26eeadd",
  "check_execution_readiness": "5bc6f341d5e9",
  "check_spawn_guard": "ee461e467241",
  "classify_task_model": "c67e1a32d73f",
  "comment_on_entity": "8a5525d8bccf",
  "complete_plan": "330451feab64",
  "configure_org": "b73f7e934044",
  "configure_outcome_type": "241babd40d8b",
  "consolidate_pr": "30c578af29e7",
  "create_decision": "dffe21ec4886",
  "create_entity": "a4ba865abf7b",
  "create_milestone": "305beff7de57",
  "create_task": "b87439f36591",
  "delegate_agent_task": "b53d880c4730",
  "entity_action": "a086cf87f989",
  "get_active_sessions": "5b6d3068a1e3",
  "get_agent_status": "71b6d4271553",
  "get_decision_history": "20f4f6a2006f",
  "get_initiative_pulse": "70f64225b9ed",
  "get_initiative_stream_state": "e475687922d2",
  "get_morning_brief": "d1b43d962ab6",
  "get_my_trust_context": "b1465a1be8f1",
  "get_operator_chronicle": "64cbbe4ee56f",
  "get_org_snapshot": "29d927830927",
  "get_outcome_attribution": "a26ff7f37782",
  "get_pending_decisions": "d36f50e1bd2f",
  "get_relevant_learnings": "d80620b33e53",
  "get_scoring_signals": "f72acd307b0f",
  "get_task_with_context": "08c50edb381f",
  "handoff_task": "6e727325f5f1",
  "improve_plan": "ab7712a9015c",
  "list_entities": "1269680af3ef",
  "list_entity_comments": "f84a41a55e19",
  "manage_lifecycle": "06c4228da928",
  "orgx_ack_attention": "bd1b99bec107",
  "orgx_act": "1acc52d745b9",
  "orgx_activate_work": "436b323307f8",
  "orgx_apply_changeset": "2e03a4773519",
  "orgx_archive_work": "586e5b19ebd7",
  "orgx_attach": "fa97567f0cb7",
  "orgx_attach_artifact": "322e39e719e6",
  "orgx_block_work": "5d9d8cc09b0b",
  "orgx_bootstrap": "0ae48e8efedc",
  "orgx_cancel_work": "25b6aa0979e3",
  "orgx_capture_decision": "255e1095d57b",
  "orgx_change_entity_state": "b24826956670",
  "orgx_check_agent_delegation": "e3e98e40d45a",
  "orgx_check_delegation": "1982dea2a7f7",
  "orgx_check_execution_readiness": "0a4463d216f7",
  "orgx_classify_agent_task": "fdae5b5460b6",
  "orgx_command_status": "55777004970f",
  "orgx_complete_entity": "092b98cd4c4b",
  "orgx_complete_plan": "4fc60d61f936",
  "orgx_complete_with_proof": "251d4af60896",
  "orgx_complete_work": "d8a832a7b917",
  "orgx_complete_work_with_proof": "6c054506f520",
  "orgx_controller_status": "8d6e5edef8ef",
  "orgx_create_and_launch_initiative_hierarchy": "d0b6a321d7b1",
  "orgx_create_and_start_agent_task": "fa022383278a",
  "orgx_create_decision": "ad9c4e87c092",
  "orgx_create_entity": "925406e163cf",
  "orgx_create_initiative": "71bd565989e7",
  "orgx_create_initiative_hierarchy": "95d6db9ea9a7",
  "orgx_create_milestone": "a109fb671bb5",
  "orgx_create_task": "62520153ba44",
  "orgx_create_work": "e69c773b95f8",
  "orgx_create_workstream": "e69ceaa6f2ec",
  "orgx_decide": "618cfe4bb3b7",
  "orgx_delegate_work": "6467f930d4e4",
  "orgx_delete_work": "37452cf0ca36",
  "orgx_describe_action": "9ee22a3df82d",
  "orgx_describe_tool": "ca80b55167b8",
  "orgx_emit_activity": "953acc905ecd",
  "orgx_emit_execution_graph": "48318413e69f",
  "orgx_estimate_agent_task": "45f445dc0118",
  "orgx_events_tail": "0df026373c8a",
  "orgx_expect": "4b2294324679",
  "orgx_flag_risk_work": "f4098e8b5561",
  "orgx_free_audit": "8ac858a2b706",
  "orgx_get_agent_status": "4b5e163cef28",
  "orgx_get_initiative_progress": "de030399c19b",
  "orgx_get_next_actions": "9e02cf8ac30f",
  "orgx_get_operation_status": "edd0bb1c8586",
  "orgx_get_operator_brief": "ec33fcedb624",
  "orgx_get_receipt_review_queue": "712c0a760f5e",
  "orgx_get_work_receipt": "e6d70bdae3eb",
  "orgx_get_workspace_context": "27aca61e2a79",
  "orgx_handoff_task": "7a7ccb2a0be0",
  "orgx_improve_plan": "3716e7ee0b79",
  "orgx_inspect": "1da486e0bb9c",
  "orgx_launch_initiative": "68dc9db26943",
  "orgx_lease": "0468b09ecd78",
  "orgx_list_pending_decisions": "ce7f0748a83d",
  "orgx_list_work_receipts": "fac60e74995b",
  "orgx_open_artifact_review": "961a2110a9b3",
  "orgx_open_decision_approval_review": "75e227980cff",
  "orgx_open_decision_rejection_review": "bdd5464b8692",
  "orgx_open_decision_review": "55b087a130e2",
  "orgx_panel_snapshot": "1389226ca538",
  "orgx_pause_work": "959b39bc1ab1",
  "orgx_plan": "a88ff09069ca",
  "orgx_poll_attention": "778df6f9ab53",
  "orgx_poll_question": "aa8c88d3a5ac",
  "orgx_read_plan": "493d64453619",
  "orgx_reassign_streams_work": "f2b2b5019c17",
  "orgx_recommend": "8235781a13e1",
  "orgx_record_decision": "005f5f6f773b",
  "orgx_record_plan_edit": "23c316caaf2d",
  "orgx_reopen_work": "d982ae5ec37a",
  "orgx_request_attention": "c7ff1662665f",
  "orgx_request_independent_artifact_review": "64088cb1237c",
  "orgx_request_plan_critique": "60bf56756075",
  "orgx_request_question": "0edde8da30eb",
  "orgx_resume_work": "b673960f019e",
  "orgx_retry_work": "09a8a6914b61",
  "orgx_save_plan": "66dce88e6897",
  "orgx_search": "c5f4c82c8eab",
  "orgx_ship_batch_work": "5599e33e5e28",
  "orgx_spawn": "ada9e4f61045",
  "orgx_start_agent_task": "e4387fc18ee4",
  "orgx_start_plan": "58ec5ba44c16",
  "orgx_start_work": "2b2759507a1c",
  "orgx_submit_receipt": "95ed2efba439",
  "orgx_submit_work_receipt": "320400e4465c",
  "orgx_tail": "9c764df70fc4",
  "orgx_unblock_work": "734faa8ee920",
  "orgx_update_entity": "c12e4275ee22",
  "orgx_update_work": "142b2951572f",
  "orgx_validate_initiative_plan": "910b4f88f733",
  "orgx_validate_studio_content": "09b9c4c534a1",
  "orgx_validate_work_receipt": "8ab7b6219192",
  "orgx_widget_approve_artifact": "0e780e29a492",
  "orgx_widget_decide": "c565287a7292",
  "orgx_widget_receipt_call": "2fb6bb611b10",
  "orgx_widget_request_artifact_changes": "a418cb95e46e",
  "orgx_widget_select_workspace": "98accdc4e686",
  "orgx_write": "5e57720e13db",
  "pin_workstream": "3a134a5ae349",
  "query_org_memory": "fd52f2ef6778",
  "queue_action": "a469db460ac6",
  "recall_memory": "33df87f18d8b",
  "recommend_next_action": "4d31724cc164",
  "record_outcome": "b7be34aaa1fb",
  "record_plan_edit": "68ff5a8bb1e0",
  "record_quality_score": "3de8dc2db6c8",
  "reject_decision": "950e24b39559",
  "remember_decision": "fd4ebc6d5afa",
  "request_independent_artifact_review": "6da7acf60824",
  "resume_agent_run": "6f4ce6512ee7",
  "resume_plan_session": "608a4ddb482a",
  "review_artifact": "615ebe5fec1f",
  "save_artifact": "56d918bf7f43",
  "scaffold_initiative": "45b6d8f5d647",
  "score_next_up_queue": "1fb0387faad9",
  "scoring_config": "70f43e1a6bef",
  "spawn_agent_task": "0aa872e31268",
  "start_autonomous_session": "dc0ffa885265",
  "start_plan_session": "7c1c660c11df",
  "stats": "09bf08a53ca0",
  "submit_learning": "9e23d799309e",
  "sync_client_state": "835db6dc15fd",
  "track_project_progress": "f15e5905e53b",
  "update_entity": "9f1a2cde0b72",
  "update_stream_progress": "025072c4c86e",
  "validate_studio_content": "7c5fb5e5480a",
  "verify_entity_completion": "c8a96db22f4f",
  "workspace": "fd799a38f5bb",
}
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "chatgpt" exposes a locked tool set > profile-chatgpt-tool-ids 1`] = `
[
  "orgx_attach_artifact",
  "orgx_cancel_work",
  "orgx_capture_decision",
  "orgx_check_execution_readiness",
  "orgx_complete_plan",
  "orgx_complete_work_with_proof",
  "orgx_create_initiative",
  "orgx_create_initiative_hierarchy",
  "orgx_create_milestone",
  "orgx_create_task",
  "orgx_create_workstream",
  "orgx_estimate_agent_task",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_next_actions",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_receipt_review_queue",
  "orgx_get_work_receipt",
  "orgx_get_workspace_context",
  "orgx_handoff_task",
  "orgx_inspect",
  "orgx_launch_initiative",
  "orgx_list_pending_decisions",
  "orgx_list_work_receipts",
  "orgx_open_artifact_review",
  "orgx_open_decision_review",
  "orgx_panel_snapshot",
  "orgx_pause_work",
  "orgx_read_plan",
  "orgx_record_plan_edit",
  "orgx_request_independent_artifact_review",
  "orgx_resume_work",
  "orgx_retry_work",
  "orgx_save_plan",
  "orgx_search",
  "orgx_start_agent_task",
  "orgx_start_plan",
  "orgx_submit_work_receipt",
  "orgx_update_work",
  "orgx_validate_initiative_plan",
  "orgx_validate_work_receipt",
  "orgx_widget_approve_artifact",
  "orgx_widget_decide",
  "orgx_widget_receipt_call",
  "orgx_widget_request_artifact_changes",
  "orgx_widget_select_workspace",
  "resume_agent_run",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "claude-code-legacy" exposes a locked tool set > profile-claude-code-legacy-tool-ids 1`] = `
[
  "get_agent_status",
  "get_initiative_pulse",
  "get_morning_brief",
  "get_operator_chronicle",
  "orgx_inspect",
  "orgx_recommend",
  "orgx_search",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "claude-directory" exposes a locked tool set > profile-claude-directory-tool-ids 1`] = `
[
  "orgx_attach_artifact",
  "orgx_cancel_work",
  "orgx_capture_decision",
  "orgx_check_execution_readiness",
  "orgx_complete_plan",
  "orgx_complete_work_with_proof",
  "orgx_create_initiative",
  "orgx_create_initiative_hierarchy",
  "orgx_create_milestone",
  "orgx_create_task",
  "orgx_create_workstream",
  "orgx_estimate_agent_task",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_next_actions",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_receipt_review_queue",
  "orgx_get_work_receipt",
  "orgx_get_workspace_context",
  "orgx_handoff_task",
  "orgx_inspect",
  "orgx_launch_initiative",
  "orgx_list_pending_decisions",
  "orgx_list_work_receipts",
  "orgx_open_artifact_review",
  "orgx_open_decision_review",
  "orgx_panel_snapshot",
  "orgx_pause_work",
  "orgx_read_plan",
  "orgx_record_plan_edit",
  "orgx_request_independent_artifact_review",
  "orgx_resume_work",
  "orgx_retry_work",
  "orgx_save_plan",
  "orgx_search",
  "orgx_start_agent_task",
  "orgx_start_plan",
  "orgx_submit_work_receipt",
  "orgx_update_work",
  "orgx_validate_initiative_plan",
  "orgx_validate_work_receipt",
  "orgx_widget_approve_artifact",
  "orgx_widget_decide",
  "orgx_widget_receipt_call",
  "orgx_widget_request_artifact_changes",
  "orgx_widget_select_workspace",
  "resume_agent_run",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "claude-directory-legacy" exposes a locked tool set > profile-claude-directory-legacy-tool-ids 1`] = `
[
  "check_execution_readiness",
  "get_agent_status",
  "get_initiative_pulse",
  "get_morning_brief",
  "get_operator_chronicle",
  "manage_lifecycle",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_change_entity_state",
  "orgx_check_delegation",
  "orgx_command_status",
  "orgx_complete_plan",
  "orgx_complete_with_proof",
  "orgx_create_entity",
  "orgx_delegate_work",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_workspace_context",
  "orgx_improve_plan",
  "orgx_inspect",
  "orgx_list_pending_decisions",
  "orgx_open_decision_review",
  "orgx_read_plan",
  "orgx_recommend",
  "orgx_record_decision",
  "orgx_record_plan_edit",
  "orgx_search",
  "orgx_start_plan",
  "orgx_submit_receipt",
  "orgx_update_entity",
  "orgx_widget_approve_artifact",
  "orgx_widget_decide",
  "orgx_widget_request_artifact_changes",
  "resume_agent_run",
  "review_artifact",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "claude-plugin" exposes a locked tool set > profile-claude-plugin-tool-ids 1`] = `
[
  "get_agent_status",
  "get_initiative_pulse",
  "get_morning_brief",
  "get_operator_chronicle",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_command_status",
  "orgx_controller_status",
  "orgx_decide",
  "orgx_emit_activity",
  "orgx_expect",
  "orgx_inspect",
  "orgx_recommend",
  "orgx_search",
  "orgx_submit_receipt",
  "orgx_tail",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "commander" exposes a locked tool set > profile-commander-tool-ids 1`] = `
[
  "check_execution_readiness",
  "consolidate_pr",
  "get_operator_chronicle",
  "orgx_ack_attention",
  "orgx_act",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_command_status",
  "orgx_complete_work",
  "orgx_create_work",
  "orgx_decide",
  "orgx_emit_execution_graph",
  "orgx_events_tail",
  "orgx_expect",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_workspace_context",
  "orgx_inspect",
  "orgx_launch_initiative",
  "orgx_list_pending_decisions",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_recommend",
  "orgx_record_plan_edit",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_spawn",
  "orgx_submit_receipt",
  "orgx_tail",
  "orgx_widget_decide",
  "orgx_write",
  "resume_agent_run",
  "scaffold_initiative",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "executor" exposes a locked tool set > profile-executor-tool-ids 1`] = `
[
  "check_execution_readiness",
  "consolidate_pr",
  "orgx_ack_attention",
  "orgx_act",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_command_status",
  "orgx_complete_work",
  "orgx_create_work",
  "orgx_emit_activity",
  "orgx_emit_execution_graph",
  "orgx_events_tail",
  "orgx_expect",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_operation_status",
  "orgx_get_workspace_context",
  "orgx_inspect",
  "orgx_lease",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_record_plan_edit",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_spawn",
  "orgx_submit_receipt",
  "orgx_tail",
  "orgx_write",
  "resume_agent_run",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "extended" exposes a locked tool set > profile-extended-tool-ids 1`] = `
[
  "orgx_activate_work",
  "orgx_archive_work",
  "orgx_attach_artifact",
  "orgx_block_work",
  "orgx_cancel_work",
  "orgx_capture_decision",
  "orgx_check_agent_delegation",
  "orgx_check_execution_readiness",
  "orgx_classify_agent_task",
  "orgx_complete_entity",
  "orgx_complete_plan",
  "orgx_complete_work_with_proof",
  "orgx_create_and_launch_initiative_hierarchy",
  "orgx_create_and_start_agent_task",
  "orgx_create_decision",
  "orgx_create_initiative",
  "orgx_create_initiative_hierarchy",
  "orgx_create_milestone",
  "orgx_create_task",
  "orgx_create_workstream",
  "orgx_delete_work",
  "orgx_estimate_agent_task",
  "orgx_flag_risk_work",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_next_actions",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_receipt_review_queue",
  "orgx_get_work_receipt",
  "orgx_get_workspace_context",
  "orgx_handoff_task",
  "orgx_inspect",
  "orgx_launch_initiative",
  "orgx_list_pending_decisions",
  "orgx_list_work_receipts",
  "orgx_open_artifact_review",
  "orgx_open_decision_approval_review",
  "orgx_open_decision_rejection_review",
  "orgx_open_decision_review",
  "orgx_panel_snapshot",
  "orgx_pause_work",
  "orgx_read_plan",
  "orgx_reassign_streams_work",
  "orgx_record_plan_edit",
  "orgx_reopen_work",
  "orgx_request_independent_artifact_review",
  "orgx_request_plan_critique",
  "orgx_resume_work",
  "orgx_retry_work",
  "orgx_save_plan",
  "orgx_search",
  "orgx_ship_batch_work",
  "orgx_start_agent_task",
  "orgx_start_plan",
  "orgx_start_work",
  "orgx_submit_work_receipt",
  "orgx_unblock_work",
  "orgx_update_work",
  "orgx_validate_initiative_plan",
  "orgx_validate_studio_content",
  "orgx_validate_work_receipt",
  "orgx_widget_approve_artifact",
  "orgx_widget_decide",
  "orgx_widget_receipt_call",
  "orgx_widget_request_artifact_changes",
  "orgx_widget_select_workspace",
  "resume_agent_run",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "legacy" exposes a locked tool set > profile-legacy-tool-ids 1`] = `
[
  "approve_agent_work",
  "approve_decision",
  "check_execution_readiness",
  "consolidate_pr",
  "delegate_agent_task",
  "get_agent_status",
  "get_initiative_pulse",
  "get_morning_brief",
  "get_operator_chronicle",
  "handoff_task",
  "manage_lifecycle",
  "orgx_ack_attention",
  "orgx_act",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_command_status",
  "orgx_controller_status",
  "orgx_decide",
  "orgx_emit_activity",
  "orgx_emit_execution_graph",
  "orgx_expect",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_work_receipt",
  "orgx_get_workspace_context",
  "orgx_inspect",
  "orgx_launch_initiative",
  "orgx_list_pending_decisions",
  "orgx_list_work_receipts",
  "orgx_panel_snapshot",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_recommend",
  "orgx_record_plan_edit",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_spawn",
  "orgx_submit_receipt",
  "orgx_tail",
  "orgx_widget_approve_artifact",
  "orgx_widget_decide",
  "orgx_widget_receipt_call",
  "orgx_widget_request_artifact_changes",
  "orgx_widget_select_workspace",
  "orgx_write",
  "query_org_memory",
  "recall_memory",
  "recommend_next_action",
  "reject_decision",
  "request_independent_artifact_review",
  "resume_agent_run",
  "review_artifact",
  "scaffold_initiative",
  "spawn_agent_task",
  "track_project_progress",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "memory" exposes a locked tool set > profile-memory-tool-ids 1`] = `
[
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_decide",
  "orgx_expect",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_operation_status",
  "orgx_get_workspace_context",
  "orgx_inspect",
  "orgx_list_pending_decisions",
  "orgx_recommend",
  "orgx_search",
  "orgx_submit_receipt",
  "orgx_widget_decide",
  "resume_agent_run",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "observer" exposes a locked tool set > profile-observer-tool-ids 1`] = `
[
  "get_operator_chronicle",
  "orgx_bootstrap",
  "orgx_command_status",
  "orgx_decide",
  "orgx_events_tail",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_workspace_context",
  "orgx_inspect",
  "orgx_list_pending_decisions",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_recommend",
  "orgx_record_plan_edit",
  "orgx_search",
  "orgx_tail",
  "orgx_widget_decide",
  "resume_agent_run",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "planner" exposes a locked tool set > profile-planner-tool-ids 1`] = `
[
  "orgx_act",
  "orgx_bootstrap",
  "orgx_command_status",
  "orgx_decide",
  "orgx_expect",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_operation_status",
  "orgx_get_workspace_context",
  "orgx_inspect",
  "orgx_launch_initiative",
  "orgx_list_pending_decisions",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_record_plan_edit",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_widget_decide",
  "orgx_write",
  "resume_agent_run",
  "scaffold_initiative",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "read-only" exposes a locked tool set > profile-read-only-tool-ids 1`] = `
[
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_next_actions",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_inspect",
  "orgx_search",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "v2" exposes a locked tool set > profile-v2-tool-ids 1`] = `
[
  "orgx_attach_artifact",
  "orgx_cancel_work",
  "orgx_capture_decision",
  "orgx_check_execution_readiness",
  "orgx_complete_plan",
  "orgx_complete_work_with_proof",
  "orgx_create_initiative",
  "orgx_create_initiative_hierarchy",
  "orgx_create_milestone",
  "orgx_create_task",
  "orgx_create_workstream",
  "orgx_estimate_agent_task",
  "orgx_get_agent_status",
  "orgx_get_initiative_progress",
  "orgx_get_next_actions",
  "orgx_get_operation_status",
  "orgx_get_operator_brief",
  "orgx_get_receipt_review_queue",
  "orgx_get_work_receipt",
  "orgx_get_workspace_context",
  "orgx_handoff_task",
  "orgx_inspect",
  "orgx_launch_initiative",
  "orgx_list_pending_decisions",
  "orgx_list_work_receipts",
  "orgx_open_artifact_review",
  "orgx_open_decision_review",
  "orgx_panel_snapshot",
  "orgx_pause_work",
  "orgx_read_plan",
  "orgx_record_plan_edit",
  "orgx_request_independent_artifact_review",
  "orgx_resume_work",
  "orgx_retry_work",
  "orgx_save_plan",
  "orgx_search",
  "orgx_start_agent_task",
  "orgx_start_plan",
  "orgx_submit_work_receipt",
  "orgx_update_work",
  "orgx_validate_initiative_plan",
  "orgx_validate_work_receipt",
  "orgx_widget_approve_artifact",
  "orgx_widget_decide",
  "orgx_widget_receipt_call",
  "orgx_widget_request_artifact_changes",
  "orgx_widget_select_workspace",
  "resume_agent_run",
]
`;
